--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 </head>
 
 <body>
+  <header>Шапка</header>
+  <main>
+    <div>
+      <div>
+        <div></div>
+      </div>
+    </div>
+
+    <div>
+      <div>
+        <div></div>
+      </div>
+    </div>
+  </main>
 
 </body>
 
