--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
   <main>
     <div>
       <div>
-        <div></div>
+        <div>
+          <h3>заголовок</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum nisi aperiam quo provident vitae quam
+            porro fugiat maxime ab vero est rem doloribus dicta veritatis impedit, corrupti commodi quasi molestiae.
+          </p>
+        </div>
       </div>
     </div>
 
