--- a/index.html
+++ b/index.html
@@ -5,27 +5,27 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
-  <!-- <script src="js/main.js" defer></script> -->
+  <script src="js/main.js" defer></script>
   <title>Отправка формы</title>
 </head>
 <body>
   <div class="wrapper">
     <div class="form">
-      <form action="send.php" name="form" method="post" id="form" class="form__body">
+      <form action="send.php" name="form" method="POST" id="form" class="form__body">
         <h1 class="form__title">Заявка на бесплатную консультацию.</h1>
         <div class="form__item">
           <label for="forName" class="form__label">Имя*</label>
-          <input type="text" id="forName" name="name" class="form__input _req">
+          <input type="text" id="forName" name="name" class="form__input _req" data-reg="^[А-ЯЁ][а-яё]*$">
         </div>
 
         <div class="form__item">
           <label for="forEmail" class="form__label">Email*</label>
-          <input type="email" id="forEmail" name="email" class="form__input _req">
+          <input type="email" id="forEmail" name="email" class="form__input _req" data-reg="^[-\w.]+@([A-z0-9][-A-z0-9]+\.)+[A-z]{2,4}$">
         </div>
 
         <div class="form__item">
           <label for="forPhone" class="form__label">Телефон*</label>
-          <input type="tel" id="forPhone" name="phone" class="form__input _req">
+          <input type="tel" id="forPhone" name="phone" class="form__input _req" data-reg="^((\+7|7|8)+([0-9]){10})$">
         </div>
 
         <div class="form__item">
@@ -62,6 +62,10 @@
               <div class="file__preview"></div>
             </div>
           </div>
+        </div>
+
+        <div class="form__button">
+          <input type="submit" id="button" value="Отправить">
         </div>
         <button type="submit" class="form__button">Отправить</button>
       
